# routes/users.js
@@ -13,7 +13,9 @@ const {
    addFriendsRequest,
    acceptFriendsRequest,
    unFriends,
-   removeFriendRequest
+   removeFriendRequest,
+   forgetPassword,
+   changePassword
 } = require('../controllers/usersController');
 
 const router = express.Router({ mergeParams: true });
@@ -32,5 +34,7 @@ router.route('/addFriendsRequest').post(addFriendsRequest);
 router.route('/acceptFriendsRequest').post(acceptFriendsRequest);
 router.route('/unFriends').post(unFriends);
 router.route('/removeFriendRequest').post(removeFriendRequest);
+router.route('/forgetPassword').post(forgetPassword);
+router.route('/changePassword').post(changePassword);
 
 module.exports = router;
